<resources>
    <string name="app_name">MovieKuApp</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="hello">Hello There, </string>
    <string name="search">search results : </string>
    <string name="linkStreaming">Link Streaming</string>
    <string name="vote">Vote</string>
    <string name="more">More</string>
    <string name="search_hint">Search movie . . .</string>
</resources>