<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomePage.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blackLess"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="25dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginEnd="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textColor="@color/white"
                    style="@style/typoMiddle"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="let's take "
                        android:textColor="@color/white"
                        style="@style/typoMiddle"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="THE BEST MOVIE"
                        android:textColor="@color/orange"
                        style="@style/typoMiddle"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="25dp">
            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:maxLines="1"
                style="@style/typoNormal"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white"
                android:hint="@string/search_hint"
                android:textColorHint="@color/grey"
                android:paddingVertical="15dp"
                android:background="@drawable/custom_circle_5dp"/>
            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@drawable/ic_search"
                android:padding="30dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/orange"
                android:background="@drawable/custom_circle_5dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:id="@+id/tvTitleTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                style="@style/typoBigBold"
                android:textColor="@color/white"/>
            <View
                android:layout_below="@+id/tvTitleTopRated"
                android:layout_width="50dp"
                android:layout_height="7dp"
                android:background="@drawable/custom_circle_5dp"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="10dp"/>
            <ImageButton
                android:id="@+id/btnMoreTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right_arrow"
                android:background="@drawable/ic_right_arrow"
                />
            </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vpMovie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:layout_constraintVertical_bias="0.0"/>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabBackground="@drawable/tab_selector"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/transparant"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:id="@+id/tvTitleUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                style="@style/typoBigBold"
                android:textColor="@color/white"/>
            <View
                android:layout_below="@+id/tvTitleUpcoming"
                android:layout_width="50dp"
                android:layout_height="7dp"
                android:background="@drawable/custom_circle_5dp"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="10dp"/>
            <ImageButton
                android:id="@+id/btnMoreUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right_arrow"
                android:background="@drawable/ic_right_arrow"
                />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:clipToPadding="false"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:id="@+id/tvTitlePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                style="@style/typoBigBold"
                android:textColor="@color/white"/>
            <View
                android:layout_below="@+id/tvTitlePopular"
                android:layout_width="50dp"
                android:layout_height="7dp"
                android:background="@drawable/custom_circle_5dp"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="10dp"/>
                />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:clipToPadding="false"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnLoadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_circle"
            android:backgroundTint="@color/yellow"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:text="More"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>